stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__runtime_check_error_kind_expected_contract_principal_value_ccall.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "6d0795e6daebf8bab5158bdd8324a8a87fbe9e2daf69a7fe178994f24ef2462a",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 168,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 14420,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 168,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 14420,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8f55b5cfc643f38ae3ed63c676ac5f59203c58704e1c474ab3a658e9af319854",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 168,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 14420,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 168,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 14420,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5e9642f9abc5f6a9b756f7e543e73c4f45bfde6c1ffc95117b8c0bf51ad539ba",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 168,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 14420,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 168,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 14420,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a523c8258ac474ce82975a8a5efb0e591d5ba916c92314fc8d50a2f8a706bc91",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch3_3-Clarity4, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0e6544aa6eccf4f0cdfff1f5cdc7e7479da13a4c17d4f109079c375daba8464b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch3_4-Clarity4, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "657545d2a290aec92cf91c00da0ca653360c6f812462ce747ce0b7c183a650a1",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch3_4-Clarity5, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7b9c653be5c7acad112ef746d44fb70113a7aa84423eaae9f879f5ad3f84418e",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 168,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 14420,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 168,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 14420,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "131c0a9c4e1528535b78f89c11e8c3e91cf756e0a49a22ab39a2a58eaaa87c58",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 168,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 14420,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 168,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 14420,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "97f0ad21d4bb2095ffff1e835cdf080a9a0ec8317633ffde23ac77615e541a91",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 168,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 14420,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 168,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 14420,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8c453f30310122b346868c41aa4104639ffad6ccd476449fdda8f69fb30c8db3",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch3_3-Clarity4, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "58009fbf494b93c91bdaf9b8248dfd604b9d792251d0105aaf8359cd0cd4bb27",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch3_4-Clarity4, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e9a652c5728f173bb7199349ae5fc4c722d388a5927b0b33c39e06be3cff8067",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch3_4-Clarity5, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "18eb0c8b24aa41f32566b2ada6d51773792e132a55b0044e8ea08333c70593f4",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch4_0-Clarity4, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "954435bc4a2705f1ce0c0bc966842dcebec71fa711cc630970e2af0cfa2bda9a",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch4_0-Clarity5, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7be91a45a8500d84ca4a37122703942d66b357f627bd6b0a498cc786c0375159",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: contract-Epoch4_0-Clarity6, function_name: trigger-error, function_args: [[]])",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 154,
          read_count: 3,
          runtime: 1267,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 154,
      read_count: 3,
      runtime: 1267,
    ),
  )),
]
