stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__runtime_check_error_kind_expected_contract_principal_value_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "18375a2fefeb711f9e9914e93346812ac340985a7441009c82d29dfcdc83e337",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 167,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 15231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 167,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 15231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "eb998afcbe8f9ec284527bb12bb672b643de429f6d6857c31e3830bb9f20a8e2",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 167,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 15231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 167,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 15231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3a20efe2fa70d546eb93d1f41967d4b81115663297ec02ded2a5d2d62a238333",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(ExpectedContractPrincipalValue(\"Principal(Standard(StandardPrincipalData(ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP)))\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 167,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 15231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 167,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 15231,
    ),
  )),
]
