stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__runtime_check_error_kind_list_types_must_match_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "c5d984882792770cdc0457a376987b7f50b2116bae5aa5785e48296eef40fa26",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 584,
          write_count: 2,
          read_length: 9,
          read_count: 3,
          runtime: 36124,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 584,
      write_count: 2,
      read_length: 9,
      read_count: 3,
      runtime: 36124,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7a89d4dc3732ea2f806aee8bb9a04b89da1e88b010545b7ed905f17027e1cf78",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ListTypesMustMatch) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 584,
          write_count: 2,
          read_length: 17,
          read_count: 5,
          runtime: 43668,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 584,
      write_count: 2,
      read_length: 17,
      read_count: 5,
      runtime: 43668,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e40be149835f29e871e3ac0bc8f125c9a8ab7f033876273f7126275b7de6de84",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ListTypesMustMatch) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 584,
          write_count: 2,
          read_length: 17,
          read_count: 5,
          runtime: 43668,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 584,
      write_count: 2,
      read_length: 17,
      read_count: 5,
      runtime: 43668,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fe281928a7e303ac21f45b8ae946756bf89550ab8589a0cc765fe8e69bc27ccf",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ListTypesMustMatch) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 584,
          write_count: 2,
          read_length: 17,
          read_count: 5,
          runtime: 43668,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 584,
      write_count: 2,
      read_length: 17,
      read_count: 5,
      runtime: 43668,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0efa026aac46720e0ecc3c9fd5f2c7c0ad9e4e25891f80de5e52ef15e0655080",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(ListTypesMustMatch) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 584,
          write_count: 2,
          read_length: 17,
          read_count: 5,
          runtime: 43668,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 584,
      write_count: 2,
      read_length: 17,
      read_count: 5,
      runtime: 43668,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4e2880614b1b5b72c2d62047ca2a276271270b6ae30b24f5b23d057761ff1d93",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-3-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(ListTypesMustMatch) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 584,
          write_count: 2,
          read_length: 17,
          read_count: 5,
          runtime: 43668,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 584,
      write_count: 2,
      read_length: 17,
      read_count: 5,
      runtime: 43668,
    ),
  )),
]
