stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_analysis_tests__runtime_check_error_kind_name_already_used_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "5017d148e606fbd8e98c57cb776111bdcb5d30543124829370d445253dccbcc0",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "1d3dd58cbbca7d342a28331b32c4f48be04fe97510ad2d9906b2bbdd9afb6e91",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a6cc411ef53a65986fed4159c7d2fda88317b53691f8e41943d4219784c338e2",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d040cb098070f6197240498115c30c05390ffdbb0d3f17b2057764033da3f371",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3c48fd8f84fc52162adf2e1ccec39eea4b5fd7f8fd7c5f546e8de41c00e569f8",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "45e42453be0c89049838a4ebaaa16afd56f045d9418a8e0845f3cbfa0ec76fa2",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: name-already-used-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(NameAlreadyUsed(\"ft-get-supply\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 41,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8785,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 41,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8785,
    ),
  )),
]
